@@ -6,6 +6,7 @@
 * If get_message_area() not available (because gtk+ is too old),
   use get_content_area() or vbox()
 * Differentiate between readonly file and directory in error messages
+* Fixed bug opening session file
 
 
 1.3.8 (04.02.2016):
